--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bcrypt": "^5.1.0",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
-    "jsonwebtoken": "^9.0.1",
+    "jose": "^4.14.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-i18next": "^13.2.2",
@@ -51,7 +51,6 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jsdom": "^21.1.1",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
