--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.0.0",
     "@tabler/icons-react": "^2.9.0",
     "@vercel/analytics": "^1.0.1",
+    "ai": "^2.2.12",
     "antd": "^5.7.2",
     "bcrypt": "^5.1.0",
     "eventsource-parser": "^0.1.0",
@@ -30,7 +31,7 @@
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-i18next": "^13.2.2",
-    "openai": "^3.2.1",
+    "openai": "4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
