--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
+    "@emoji-mart/data": "1.0.6",
+    "@emoji-mart/react": "1.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@tabler/icons-react": "^2.9.0",
@@ -26,9 +28,11 @@
     "antd": "^5.7.2",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
+    "emoji-mart": "5.2.2",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
     "jose": "^4.14.1",
+    "jotai": "^1.8.3",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-i18next": "^13.2.2",
@@ -52,6 +56,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/emoji-mart": "^3.0.10",
     "@types/jsdom": "^21.1.1",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
