--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["vitest/globals", "emoji-mart-react"],
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "types": ["vitest/globals", "@emoji-mart/react"],
     "paths": {
       "@/*": ["./*"]
     }
