--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
-    "@emoji-mart/data": "1.0.6",
-    "@emoji-mart/react": "1.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@tabler/icons-react": "^2.9.0",
@@ -28,7 +26,7 @@
     "antd": "^5.7.2",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
-    "emoji-mart": "5.2.2",
+    "emoji-picker-react": "^4.5.2",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
     "jose": "^4.14.1",
