--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dqbd/tiktoken": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@tabler/icons-react": "^2.9.0",
     "@vercel/analytics": "^1.0.1",
     "ai": "^2.2.12",
@@ -41,6 +42,7 @@
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
+    "react-speech-recognition": "^3.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
@@ -58,6 +60,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-speech-recognition": "^3.9.2",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/uuid": "^9.0.1",
     "@vitest/coverage-c8": "^0.29.7",
