--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@chatui/core": "^2.4.2",
     "@dqbd/tiktoken": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
