--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.0.0",
     "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@tabler/icons-react": "^2.9.0",
+    "@upstash/redis": "^1.23.3",
     "@vercel/blob": "^0.13.0",
     "ai": "^2.2.12",
     "antd": "^5.7.2",
@@ -34,6 +35,7 @@
     "i18next": "^22.4.13",
     "jose": "^4.14.1",
     "jotai": "^1.8.3",
+    "mailgun.js": "9.3.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-i18next": "^13.2.2",
